# astro-linmix

./: pyproject.toml
.github/workflows/: python-package.yml
linmix/: __init__.py  linmix.py
